Cycles portals: Luminance artifacts #47411

Closed
opened 2016-02-14 19:45:07 +01:00 by Marek Moravec · 7 comments

System Information
Win10 64bit, 2x GTX970, i7 5820K

Blender Version
Broken: 2.76b
Worked: ---

Short description of error
The portal planes divide the scene into smaller parts and some of the parts are rendered darker than the other.

Exact steps for others to reproduce the error
Portal.blend
Open the blend file and hit F12 (Render)
The render has visible "lines" going from the intersection of portals - even over the monkey.
Disable the second layer with portals and render it again - now the artifact are gone.

**System Information** Win10 64bit, 2x GTX970, i7 5820K **Blender Version** Broken: 2.76b Worked: --- **Short description of error** The portal planes divide the scene into smaller parts and some of the parts are rendered darker than the other. **Exact steps for others to reproduce the error** [Portal.blend](https://archive.blender.org/developer/F282669/Portal.blend) Open the blend file and hit F12 (Render) The render has visible "lines" going from the intersection of portals - even over the monkey. Disable the second layer with portals and render it again - now the artifact are gone.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Traverso

Added subscriber: @Traverso
Lukas Stockner was assigned by Thomas Dinges 2016-02-15 19:22:35 +01:00

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges
Member

Can confirm the bug, most likely something in the PDF evaluation goes wrong when one of the portals is ignored due to the facing test.
I'll have a look.

Can confirm the bug, most likely something in the PDF evaluation goes wrong when one of the portals is ignored due to the facing test. I'll have a look.

This issue was referenced by 8d95178c0b

This issue was referenced by 8d95178c0bef5f3bd0e3425ca2b45d5474e5f70a
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/cycles@27c1f95089

This issue was referenced by blender/cycles@27c1f9508916953f97c4edfab8804767c66707f0
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47411
No description provided.